--- a/SIGS/app/views/school_rooms/index.html.erb
+++ b/SIGS/app/views/school_rooms/index.html.erb
@@ -32,7 +32,7 @@
           <% school_room.course.each do |course| %>
             <%= course.name %> <br>
           <% end %>
-        <td><%= school_room.capacity %></td>
+        <td><%= school_room.vacancies %></td>
         </td>
         <td style="text-align:center"><%= link_to image_tag("icon_edit.png"), school_rooms_edit_path(school_room.id) %></td>
         <td style="text-align:center"><%= link_to image_tag("icon_trash.png"), destroy_school_room_path(school_room.id), data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"} %></td>
