--- a/SIGS/app/views/school_rooms/search_disciplines.html.erb
+++ b/SIGS/app/views/school_rooms/search_disciplines.html.erb
@@ -34,7 +34,7 @@
             <%= course.name %> <br>
           <% end %>
         </td>
-        <td><%= school_room.capacity %></td>
+        <td><%= school_room.vacancies %></td>
         <td style="text-align:center"><%= link_to image_tag("icon_edit.png"), school_rooms_edit_path(school_room.id) %></td>
 				<td style="text-align:center"><%= link_to image_tag("icon_trash.png"), destroy_school_room_path(school_room.id), data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"} %></td>
         </td>
