--- a/SIGS/app/views/school_rooms/search_disciplines.html.erb
+++ b/SIGS/app/views/school_rooms/search_disciplines.html.erb
@@ -1,3 +1,5 @@
+<%= link_to 'Voltar', school_rooms_index_path, class: ' pull-right btn btn-primary' %>
+
 <% if @disciplines.present? %>
 
 	<h2> Disciplinas encontradas: </h2>
