--- a/SIGS/app/views/allocations/new.html.erb
+++ b/SIGS/app/views/allocations/new.html.erb
@@ -3,10 +3,10 @@
 <%= form_for @allocation, url: allocations_create_path do |allocation| %>
 
   <label> Sala </label>
-  <%= allocation.collection_select(:room_id,@coordinator_rooms,:id,:name, include_blank: true)%>
+  <%= allocation.collection_select(:room_id,@coordinator_rooms,:id,:name)%>
 
   <label> Turma </label> <%= link_to "+ Criar uma nova turma" , school_rooms_new_path %><br>
-  <%= allocation.collection_select(:school_room_id,@school_rooms_coordinator,:id,:name, include_blank: true) %>
+  <%= allocation.collection_select(:school_room_id,@school_rooms_coordinator,:id,:name) %>
 
   <% days = ["Segunda","Terça","Quarta","Quinta","Sexta","Sabado"] %>
   <%= allocation.label :day, "Escolha um dia:" %><br>
