issue #35 add some style to search bar

--- a/SIGS/app/assets/stylesheets/school_rooms.scss
+++ b/SIGS/app/assets/stylesheets/school_rooms.scss
@@ -15,49 +15,29 @@
 }
 
 .container-search-form {
+
 }
 
-.input-search {
-	width: 30%;
-  box-sizing: border-box;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-  font-size: 16px;
-  background-color: white;
-  background-image: url('searchicon.png');
-  background-position: 10px 10px; 
-  background-repeat: no-repeat;
-  padding: 12px 20px 12px 40px;
-  -webkit-transition: width 0.4s ease-in-out;
-  transition: width 0.4s ease-in-out;
+.search-elements {  
+  display: inline-block;
 }
 
-.input-search:focus {
-	width: 70%;
+.icon-search-submit {
+  border: 0px;
+  background-color: #FFFFFF;
 }
 
-ul.ui-autocomplete {
-  position: absolute;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  cursor: default;
-  border: solid 4px darkgray;
+
+.search-input {
+  padding: 5%;
+  border-top-style: none;
+  border-right-style: none;
+  border-bottom-style: solid;
+  border-left-style: none;
+  border-bottom-color: black;
+  border-bottom-width: 1px;
 }
 
-ul.ui-autocomplete li {
-  background-color: #FFF;
-  border-top: solid 1px #DDD;
-  margin: 0;
-  padding: 0;  
-}
-
-ul.ui-autocomplete li a {
-  color: #000;
-  display: block;
-  padding: 3px;
-}
-
-ul.ui-autocomplete li a.ui-state:hover, a.ui-state:active {
-  background-color: slateblue;
+.search-input:focus {
+  border-bottom-width: 2px;
 }
