--- a/SIGS/app/views/school_rooms/edit.html.erb
+++ b/SIGS/app/views/school_rooms/edit.html.erb
@@ -9,6 +9,11 @@
     <%= school_room.text_field :name, class: 'form-control', id: 'school_room_name', :disabled => true  %>
   </div>
 
+  <div class="short_input">
+    <%= school_room.label :capacity, "Capacidade" %>
+    <%= school_room.text_field :capacity, class: 'form-control', id: 'school_room_capacity', pattern: '^\d{1,99}$' %>
+  </div>
+
   <p> Cursos</p>
   <div class="checkbox-group">
 
