--- a/SIGS/app/views/school_rooms/new.html.erb
+++ b/SIGS/app/views/school_rooms/new.html.erb
@@ -10,6 +10,11 @@
     <%= school_room.text_field :name, class: 'form-control', id: 'school_room_name' %>
   </div>
 
+  <div class="short_input">
+    <%= school_room.label :capacity, "Capacidade" %>
+    <%= school_room.text_field :capacity, class: 'form-control', id: 'school_room_capacity' %>
+  </div>
+
   <p> Cursos</p>
   <div class="checkbox-group">
 
