add some attributes to school room

--- a/SIGS/app/views/school_rooms/search_disciplines.html.erb
+++ b/SIGS/app/views/school_rooms/search_disciplines.html.erb
@@ -1,14 +1,14 @@
-<%= link_to 'Voltar', school_rooms_index_path, class: ' pull-right btn btn-primary' %>
+<%= link_to 'Voltar', school_rooms_index_path, class: ' pull-right btn btn-default btn-success' %>
 
 <% if @disciplines.present? %>
 
-	<h2> Disciplinas encontradas: </h2>
+	<h1> Disciplinas encontradas: </h1>
 	<table class="table table-hover">
     <tr>
       <th>Nome</th>
-      <th>Ativo</th>
       <th>Disciplina</th>
       <th>Cursos</th>
+      <th>Capacitadade</th>
       <th style="text-align:center">Alterar</th>
       <th style="text-align:center">Visualizar</th>
       <th style="text-align:center">Excluir</th>
@@ -16,19 +16,17 @@
     <% @school_rooms.each do |school_room| %>
       <tr>
         <td><%= school_room.name %></td>
-        <td><%= raw ((school_room.active) ? '<i class="fa fa-check-circle fa-lg"></i>' : '<i class="fa fa-times-circle fa-lg"></i>')  %></td>
         <td><%= school_room.discipline.name %></td>
         <td>
           <% school_room.course.each do |course| %>
             <%= course.name %> <br>
           <% end %>
         </td>
+        <td><%= school_room.capacity %></td>
         <td style="text-align:center"><%= link_to image_tag("icon_edit.png"), school_rooms_edit_path(school_room.id) %></td>
         <td style="text-align:center"><%= link_to image_tag("icon_view.png", id: 'icon_visualizar'+school_room.name), school_rooms_show_path(school_room.id) %></td>
         <td style="text-align:center">
-					<%= link_to delete_path(school_room.id), method: "delete", data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"} do %>
-  			    <i class="fa fa-trash fa-lg"></i>
-  			  <% end %>
+          <%= link_to image_tag("icon_trash.png"), delete_path(school_room.id), method: "delete", data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"} %>
         </td>
       </tr>
     <% end %>
