--- a/SIGS/app/views/rooms/index.html.erb
+++ b/SIGS/app/views/rooms/index.html.erb
@@ -4,7 +4,7 @@
   <%= text_field_tag 'name', nil, placeholder: 'Digite o nome da sala...', size: '50', class: 'form-control' %>
   <%= text_field_tag 'code', nil, placeholder: 'Digite o código da sala...', size: '50', class: 'form-control' %>
   <%= number_field_tag 'capacity', nil, placeholder: 'Digite a quantidade de vagas...', size: '300', class: 'form-control' %>
-
+  Ativa <%= check_box_tag 'active', value="1", checked = false%>
   <%= submit_tag "Submit"%>
 <% end %>
 
