issue #35: Fix layout organization

--- a/SIGS/app/views/school_rooms/edit.html.erb
+++ b/SIGS/app/views/school_rooms/edit.html.erb
@@ -10,19 +10,14 @@
     <%= school_room.label :capacity, "Capacidade" %>
     <%= school_room.number_field :capacity, class: 'form-control' %>
   </div>
-
-  <div class="short_input">
-    <%= school_room.label :capacity, "Capacidade" %>
-    <%= school_room.text_field :capacity, class: 'form-control', id: 'school_room_capacity', pattern: '^\d{1,99}$' %>
-  </div>
-
-  <p> Cursos</p>
+  <br>
+  <%= school_room.label :course_ids, "Cursos" %>
   <div class="checkbox-group">
 
     <%= school_room.collection_check_boxes(:course_ids, @all_courses, :id, :name, include_blank: true)%>
   </div>
   <br>
-  <p> Categorias</p>
+  <%= school_room.label :category_ids, "Categorias" %>
   <div class="checkbox-group">
     <%= school_room.collection_check_boxes(:category_ids,all_categories,:id,:name, include_blank: true)%>
   </div>
