--- a/SIGS/app/views/school_rooms/index.html.erb
+++ b/SIGS/app/views/school_rooms/index.html.erb
@@ -1,5 +1,4 @@
-<%= link_to 'Criar Turma', school_rooms_new_path, class: ' pull-right btn btn-default btn-success btn-lg' %>
-<h1>Suas Turmas</h1>
+<h1>Turmas - <%= department_name_by_user %></h1>
 
 <%= form_for(:current_search, url: search_disciplines_path) do |f|%>
 
@@ -18,18 +17,17 @@
 <% else %>
   <table class="table table-hover">
     <tr>
-      <th>Nome</th>
       <th>Disciplina</th>
+      <th>Turma</th>
       <th>Cursos</th>
-      <th>Capacidade</th>
+      <th>Nº de Vagas</th>
       <th style="text-align:center">Alterar</th>
-      <th style="text-align:center">Visualizar</th>
       <th style="text-align:center">Excluir</th>
     </tr>
     <% @my_school_rooms.each do |school_room| %>
       <tr>
-        <td><%= school_room.name %></td>
         <td><%= school_room.discipline.name %></td>
+        <td><%= school_room.name %></td>
         <td>
           <% school_room.course.each do |course| %>
             <%= course.name %> <br>
@@ -37,7 +35,6 @@
         <td><%= school_room.capacity %></td>
         </td>
         <td style="text-align:center"><%= link_to image_tag("icon_edit.png"), school_rooms_edit_path(school_room.id) %></td>
-        <td style="text-align:center"><%= link_to image_tag("icon_view.png", id: 'icon_visualizar'+school_room.name), school_rooms_show_path(school_room.id) %></td>
         <td style="text-align:center"><%= link_to image_tag("icon_trash.png"), destroy_school_room_path(school_room.id), data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"} %></td>
         </td>
       </tr>
