--- a/SIGS/app/views/school_rooms/search_disciplines.html.erb
+++ b/SIGS/app/views/school_rooms/search_disciplines.html.erb
@@ -6,7 +6,7 @@
     <%= f.text_field :search, placeholder: "Buscar por disciplinas", id: 'input-search-field', class: 'search-input', data: {autocomplete_source: discipline_of_department(user_department_id).order(:name).map(&:name)} %>
   </div>
   <div class="search-elements">
-    <%= button_tag type: 'submit', class: "icon-search-submit" do %>
+    <%= button_tag type: 'submit', class: "icon-search-submit", id: "searchButton" do %>
       <i class="fa fa-search fa-lg"></i>
     <% end %>
   </div>
