--- a/SIGS/app/views/rooms/index.html.erb
+++ b/SIGS/app/views/rooms/index.html.erb
@@ -5,11 +5,25 @@
   <td><%= text_field_tag 'name', nil, placeholder: 'Digite o nome da sala...', size: '50', class: 'form-control' %></td>
   <td><%= text_field_tag 'code', nil, placeholder: 'Digite o código da sala...', size: '50', class: 'form-control' %></td>
   <td><%= number_field_tag 'capacity', nil, placeholder: 'Digite a quantidade de vagas...', size: '300', class: 'form-control' %></td>
-  <td>Ativa <%= check_box_tag 'active', value="1", checked = false%></td>
-  <td><%= submit_tag "Submit"%></td>
-<% end %>
 </tr>
+
+  <tr>
+    <td class="select_active">
+    <%= label_tag(:active_ativa, "Ativa") %>
+      <%= radio_button_tag(:ativo, "ativa", :id => "id_active") %>
+    </td>
+    <td>
+    <%= label_tag(:active_inativa, "Inativa") %>
+      <%= radio_button_tag(:ativo, "inativa", :id => "id_anative") %>
+    </td>
+    <!--<td>Ativa <%= check_box_tag 'active', value="1", checked = false%></td>  
+    <td>Inativa <%= check_box_tag 'active', value="0", checked = false%></td>-->
+    <td><%= submit_tag "Submit"%></td>
+  </tr>
+
 </table>
+<% end %>
+
 <!--
   <%= form_for :index, url: room_index_path,  :html => {:role => 'form'} do |f| %>
     <%= f.label :name, "Nome " %>
@@ -46,6 +60,7 @@
     <h3>Não há salas registradas no momento.</h3>
   <% else %>
     <table class="table">
+    <thead>
       <tr>
         <th>Código</th>
         <th>Nome</th>
@@ -54,15 +69,67 @@
         <th style="text-align:center">Alterar</th>
         <th style="text-align:center">Visualizar</th>
       </tr>
+    </thead>
+    <tbody class="show_room">
       <% @rooms.each do |room| %>
         <tr>
           <td><%= room.code %></td>
           <td><%= room.name %></td>
-          <td><%=  ((room.active) ? 'Sim' : 'Não')  %></td>
+          <td id="active_room"><%=  ((room.active) ? 'Sim' : 'Não')  %></td>
           <td><%= room.building.name %></td>
           <td style="text-align:center"><%= link_to image_tag("icon_edit.png"), room_edit_path(room.id) %></td>
           <td style="text-align:center"><%= link_to image_tag("icon_view.png"), room_path(room.id) %></td>
         </tr>
-      <% end %>
+      <% end %> 
+    </tbody>  
     </table>
   <% end %>
+
+<script>
+  var active;
+  var bool;
+
+  $("input:radio").click(function(){
+    active = $(this).attr("value");
+    if(active == "ativa"){
+        bool = true;
+    }else{
+      bool = false;
+    }
+
+    if(bool){
+      <% @rooms.each do |room| %>
+        if (<%=room.active%>) {
+          $(".show_room").html(
+            "<tr>"
+              + "<td><%=room.code%></td>"
+              + "<td><%= room.name %></td>"
+              + "<td id='active_room'><%=((room.active) ? 'Sim' : 'Não')  %></td>"
+              + "<td><%= room.building.name %></td>"
+              + '<td style="text-align:center"><%= link_to image_tag("icon_edit.png"), room_edit_path(room.id) %></td>'
+              + '<td style="text-align:center"><%= link_to image_tag("icon_view.png"), room_path(room.id) %></td>'
+            + "</tr>"
+          )
+      }
+    <%end%>
+  }else{
+     <% @rooms.each do |room| %>
+          $(".show_room").html(
+            "<tr>"
+              + "<td><%=room.code%></td>"
+              + "<td><%= room.name %></td>"
+              + "<td id='active_room'><%=  ((room.active) ? 'Sim' : 'Não')  %></td>"
+              + "<td><%= room.building.name %></td>"
+              + '<td style="text-align:center"><%= link_to image_tag("icon_edit.png"), room_edit_path(room.id) %></td>'
+              + '<td style="text-align:center"><%= link_to image_tag("icon_view.png"), room_path(room.id) %></td>'
+            + "</tr>"
+          )
+    <%end%>
+
+  }
+    
+  });
+  
+
+  
+</script>
