--- a/SIGS_prototype/assets/css/style.css
+++ b/SIGS_prototype/assets/css/style.css
@@ -87,6 +87,38 @@
   width: 100%;
 }
 
+.tableDisciplineReport > tbody > tr > td {
+     vertical-align: middle;
+}
+
+.search-elements {
+  display: inline-block;
+}
+
+.icon-search-submit {
+  border: 0px;
+  background-color: #FFFFFF;
+}
+
+
+.search-input {
+  padding: 5%;
+  border-top-style: none;
+  border-right-style: none;
+  border-bottom-style: solid;
+  border-left-style: none;
+  border-bottom-color: black;
+  border-bottom-width: 1px;
+}
+
+.search-input:focus {
+  border-bottom-width: 2px;
+}
+
+.formDisciplineSearch {
+  margin: 30px auto;
+}
+
 /* #erro-message {
    max-width: 200px;
 } */
