issue #24: Implement methods create and new of controller/view allocation_extensions and extensions
Signed-off-by: Matias0422 <leguenta@hotmail.com>
Signed-off-by: danielmarques28 <danielmarques7@hotmail.com>
Signed-off-by: Wallacy Braz <wallacy.braz@live.com>
Signed-off-by: mendesiasmin <mendesiasmin96@gmail.com>

--- a/SIGS/app/assets/stylesheets/form.scss
+++ b/SIGS/app/assets/stylesheets/form.scss
@@ -9,8 +9,13 @@
   margin-bottom:20px;
 }
 
-.myContainer input[type="number"]{
+.myContainer input[type="number"] {
   width: 100px;
+}
+
+.myContainer input[type="date"],
+.myContainer input[type="time"] {
+  width: 150px;
 }
 
 .myContainer input[type="submit"] {
@@ -55,6 +60,10 @@
     width: auto;
     margin-right: 10px;
   }
+}
+
+.short_input {
+  max-width: 50%;
 }
 
 .short_input select{
