--- a/SIGS/app/assets/stylesheets/style.scss
+++ b/SIGS/app/assets/stylesheets/style.scss
@@ -43,6 +43,11 @@
   justify-content: space-between;
 }
 
+.flexContainer .flexStart {
+  display: flex;
+  justify-content: flex-start;
+}
+
 .flexColumn {
   flex-direction: column;
 }
