--- a/SIGS/app/views/layouts/application.html.erb
+++ b/SIGS/app/views/layouts/application.html.erb
@@ -71,6 +71,9 @@
               </li>
              <li class="dropdown">
                 <a data-toggle="collapse" href="#relatorios">Relatórios
+                    <ul class="collapse" id="relatorios">
+                        <li><%= link_to "Disciplinas", reports_by_discipline_path %></li>
+                    </ul>
                   <ul class="collapse" id="relatorios">
                     <li><%= link_to "Salas", reports_by_room_path %></li>
                   </ul>
