--- a/SIGS/app/views/reports/by_room.html.erb
+++ b/SIGS/app/views/reports/by_room.html.erb
@@ -28,8 +28,8 @@
 <script type="text/javascript">
 
   $('input:checkbox').click(function (){
-    $("#reports_filter").prop('disabled', $(this).prop('checked'));
-    $("#reports_room_code").prop('disabled', $(this).prop('checked'));
+    $("#reports_by_room_filter").prop('disabled', $(this).prop('checked'));
+    $("#reports_by_room_room_code").prop('disabled', $(this).prop('checked'));
     if($(this).prop('checked')){
       $("span").html("Campo desativado");
       
@@ -38,22 +38,22 @@
     }
   });
 
-  $('#reports_departments').change(function(){	
+  $('#reports_by_room_departments').change(function(){	
   	ajax('json_of_rooms_by_department?department_code=' + $(this).val());
   });
 
-  $('#reports_filter').keyup(function(){
-  	ajax('json_of_rooms_with_parts_of_name?department_code=' + $('#reports_departments').val() + "&part_name=" + $(this).val());
+  $('#reports_by_room_filter').keyup(function(){
+  	ajax('json_of_rooms_with_parts_of_name?department_code=' + $('#reports_by_room_departments').val() + "&part_name=" + $(this).val());
   });
 
 function ajax(url){
 	$.getJSON(url,{
   		format: "json"
   	}).done(function(data){
-  		$('#reports_room_code').empty();
+  		$('#reports_by_room_room_code').empty();
   		$.each(data, function(i,item){
   			var option = "<option value='"+item.id+"'>"+item.name+"</option>";
-  			$('#reports_room_code').append(option);
+  			$('#reports_by_room_room_code').append(option);
   		})
   });
 }
