--- a/SIGS/app/views/reports/by_discipline.html.erb
+++ b/SIGS/app/views/reports/by_discipline.html.erb
@@ -3,7 +3,7 @@
 <%= form_for :reports_by_discipline, url: reports_by_discipline_post_path do |f| %>
 
 	<%= f.text_field :discipline, class: 'form-control', placeholder: 'Buscar por disciplinas' %>
-  <%= f.submit "Gerar", class: 'pull-right btn btn-default btn-success' %>
+  <%= f.submit "Pesquisar", class: 'pull-right btn btn-default btn-success' %>
 
 <% end %>
 
