--- a/SIGS/app/views/reports/by_discipline.html.erb
+++ b/SIGS/app/views/reports/by_discipline.html.erb
@@ -1,8 +1,8 @@
 <h1>Relatório por Disciplina</h1>
 
-<%= form_for :reports_by_discipline, url: reports_by_discipline_post_path do |f| %>
+<%= form_tag(reports_by_discipline_post_path, :method => :post) do %>
 
-	<%= f.text_field :discipline, class: 'form-control', placeholder: 'Buscar por disciplinas' %>
+	<%= text_field_tag 'discipline', nil, class: 'form-control', placeholder: 'Buscar por disciplinas' %>
   <%= f.submit "Pesquisar", class: 'pull-right btn btn-default btn-success' %>
 
 <% end %>
