Create filter by wings for rooms

--- a/SIGS/app/views/rooms/index.html.erb
+++ b/SIGS/app/views/rooms/index.html.erb
@@ -24,7 +24,7 @@
 
     <td>
       <%= label_tag("Ala") %>
-      <% itens = [["norte"], ["central"], ["sul"]] %>
+      <% itens = [["NORTE"], ["CENTRAL"], ["SUL"]] %>
       <%= select_tag 'wing', options_for_select(itens, " "), include_blank: true %>
     </td>
   </tr>
