--- a/SIGS/app/views/allocations/new.html.erb
+++ b/SIGS/app/views/allocations/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Alocação</h1> <br><br>
 
 <label> Turma </label>
-<%= select_tag "sala", options_from_collection_for_select(@school_rooms_coordinator, 'id', 'name'),:include_blank => true %>
+<%= select_tag "sala", options_from_collection_for_select(@school_rooms_coordinator, 'id', 'name'),:include_blank => false %>
 <br><br>
 <div class="flexContainer">
   <button type="button" class="btn btn-success day_button" data-toggle="modal" data-target="#myModal">Segunda</button>
@@ -23,7 +23,7 @@
             <%= form_for @allocation, url: allocations_create_path do |allocation| %>
 
               <label> Sala </label>
-              <%= allocation.collection_select(:room_id,@coordinator_rooms,:id,:name, include_blank: true)%>
+              <%= allocation.collection_select(:room_id,@coordinator_rooms,:id,:name, include_blank: false)%>
 
               <%= allocation.hidden_field :school_room_id, class: 'sala' %>
               <!-- <label> Turma </label> <%= link_to "+ Criar uma nova turma" , school_rooms_new_path %><br>
