--- a/SIGS/app/views/reports/by_discipline.html.erb
+++ b/SIGS/app/views/reports/by_discipline.html.erb
@@ -2,8 +2,14 @@
 
 <%= form_tag(reports_by_discipline_post_path, :method => :post) do %>
 
-	<%= text_field_tag 'name', nil, class: 'form-control', placeholder: 'Buscar por disciplinas' %>
-  <%= submit_tag "Pesquisar", class: 'pull-right btn btn-default btn-success' %>
+<div class="search-elements">
+	<%= text_field_tag 'name', nil, id: 'input-search-field', class: 'search-input', placeholder: 'Buscar por disciplinas' %>
+</div>
+<div class="search-elements">
+	<%= button_tag type: 'submit', class: "icon-search-submit", id: "searchButton" do %>
+		<i class="fa fa-search fa-lg"></i>
+	<% end %>
+</div>
 
 <% end %>
 
@@ -21,7 +27,7 @@
       <tr>
         <td><%= discipline.name %></td>
         <td><%= discipline.department.name %></td>
-				<td style="text-align:center"><%= link_to image_tag("icon_pdf.png"), generate_by_discipline_path(discipline.id) %></td>
+				<td><%= link_to image_tag("icon_pdf.png"), generate_by_discipline_path(discipline.id) %></td>
       </tr>
     <% end %>
 <% end %>
